cluster/manifests/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbac 
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-manager
  namespace: rbac
spec:
  serviceAccountName: pod-manager
  automountServiceAccountToken: true
  containers:
  - name: reader
    image: bitnami/kubectl
    command:
    - /bin/sh
    args:
    - -c
    - "while true;do echo '\nListing pods ...';kubectl get pods -o wide;sleep 5;done"
    resources:
      requests:
        cpu: 100m
        memory: 100Mi
      limits:
        cpu: 100m
        memory: 100Mi
